# anis-1-core

./: .replit  LICENSE  README.md  index.html  main.py  package-lock.json  package.json  pyproject.toml  replit.md  requirements.txt  server.js  start.sh  style.css  test_openai.py  tsconfig.json  vercel.json  vite.config.ts
agents/: __init__.py  document_agent.py  finance_agent.py  operations_agent.py  orchestrator_agent.py  reviewer_agent.py  strategy_agent.py  watchtower_agent.py
anis_1_core/: README.md  pyproject.toml
anis_1_core/src/anis_1_core/: __init__.py  agents.py  crew.py  main.py  tasks.py
anis_1_core/src/anis_1_core/config/: agents.yaml  tasks.yaml
api/: server.py
attached_assets/: Pasted-Act-as-a-senior-Python-CrewAI-engineer-working-inside-t_1773800233904.txt  Pasted-Act-as-a-senior-enterprise-AI-architect-working-inside-_1773804348799.txt  Pasted-Fix-this-repository-and-convert-it-into-a-valid-CrewAI-_1773886455314.txt
backend/: server.py
council/: __init__.py  ai_council.py
dashboard/: commander_dashboard.tsx  type ExecutiveStatus
outputs/: anis1_report_Analyze_production_efficiency_for_Abdelj_20260319_032346.md  anis1_report_Analyze_production_efficiency_for_Abdelj_20260319_035647.md  anis1_report_Analyze_production_efficiency_for_Abdelj_20260319_040035.md  anis1_report_Analyze_production_efficiency_for_Abdelj_20260319_040114.md  anis1_report_Build_a_12-month_transformation_roadmap_20260318_040509.md  anis1_report_Build_a_12-month_transformation_roadmap_20260318_040714.md  anis1_report_Build_a_12-month_transformation_roadmap_20260318_040842.md  anis1_report_Create_a_12-month_expansion_plan_for_Abd_20260318_025250.md  anis1_report_Create_a_12-month_strategic_expansion_pl_20260318_024053.md  anis1_report_Create_a_cross-functional_executive_plan_20260318_023036.md  (+16 more)
prompts/: agent_prompts.md
src/: main.tsx
(+6 files in other folders)
