[project]
name = "anis_1_core"
version = "0.1.0"
description = "anis-1-core using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.6.1"
]

[project.scripts]
anis_1_core = "anis_1_core.main:run"
run_crew = "anis_1_core.main:run"
train = "anis_1_core.main:train"
replay = "anis_1_core.main:replay"
test = "anis_1_core.main:test"
run_with_trigger = "anis_1_core.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
